src/antlrFlask/ProjectParser.java
// Generated from C:/Users/DELL/Desktop/CompilerFlaskAndJinja/src/antlrFlask/ProjectParser.g4 by ANTLR 4.13.2
package antlrFlask;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProjectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, NEWLINE=3, COMMENT=4, WS=5, LPAREN=6, RPAREN=7, LBRACK=8, 
		RBRACK=9, LBRACE=10, RBRACE=11, DEF=12, CLASS=13, RETURN=14, IF=15, ELSE=16, 
		ELIF=17, FOR=18, WHILE=19, IN=20, IMPORT=21, FROM=22, AS=23, PASS=24, 
		BREAK=25, CONTINUE=26, GLOBAL=27, NONLOCAL=28, TRUE=29, FALSE=30, NONE=31, 
		NOT=32, AND=33, OR=34, TRY=35, EXCEPT=36, FINALLY=37, WITH=38, LAMBDA=39, 
		ASYNC=40, AWAIT=41, PLUS=42, MINUS=43, STAR=44, POW=45, SLASH=46, FSLASH=47, 
		PERCENT=48, EQ=49, EQEQ=50, NOTEQ=51, LT=52, LE=53, GT=54, GE=55, ARROW=56, 
		TILDE=57, BITAND=58, BITOR=59, XOR=60, LSHIFT=61, RSHIFT=62, COLON=63, 
		COMMA=64, DOT=65, SEMI=66, AT=67, STRING=68, FSTRING=69, NUMBER=70, NAME=71, 
		DEL=72;
	public static final int
		RULE_proge = 0, RULE_empty_line = 1, RULE_statement = 2, RULE_simple_stmt = 3, 
		RULE_small_stmt = 4, RULE_expr_stmt = 5, RULE_annAssign = 6, RULE_augassign = 7, 
		RULE_testlist_star_expr = 8, RULE_test = 9, RULE_or_test = 10, RULE_and_test = 11, 
		RULE_not_test = 12, RULE_comparison = 13, RULE_comp_op = 14, RULE_arith_expr = 15, 
		RULE_term = 16, RULE_factor = 17, RULE_power = 18, RULE_atom_expr = 19, 
		RULE_atom = 20, RULE_trailer = 21, RULE_subscriptlist = 22, RULE_subscript = 23, 
		RULE_listmaker = 24, RULE_dictmaker = 25, RULE_comp_for = 26, RULE_testlist_comp = 27, 
		RULE_arglist = 28, RULE_argument = 29, RULE_del_stmt = 30, RULE_pass_stmt = 31, 
		RULE_flow_stmt = 32, RULE_import_stmt = 33, RULE_dotted_name = 34, RULE_dotted_as_names = 35, 
		RULE_dotted_as_name = 36, RULE_import_as_names = 37, RULE_import_as_name = 38, 
		RULE_global_stmt = 39, RULE_compound_stmt = 40, RULE_decorated = 41, RULE_decorator = 42, 
		RULE_if_stmt = 43, RULE_while_stmt = 44, RULE_for_stmt = 45, RULE_funcdef = 46, 
		RULE_parameters = 47, RULE_typedargslist = 48, RULE_tfpdef = 49, RULE_classdef = 50, 
		RULE_try_stmt = 51, RULE_with_stmt = 52, RULE_with_item = 53, RULE_suite = 54, 
		RULE_exprlist = 55, RULE_testlist = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"proge", "empty_line", "statement", "simple_stmt", "small_stmt", "expr_stmt", 
			"annAssign", "augassign", "testlist_star_expr", "test", "or_test", "and_test", 
			"not_test", "comparison", "comp_op", "arith_expr", "term", "factor", 
			"power", "atom_expr", "atom", "trailer", "subscriptlist", "subscript", 
			"listmaker", "dictmaker", "comp_for", "testlist_comp", "arglist", "argument", 
			"del_stmt", "pass_stmt", "flow_stmt", "import_stmt", "dotted_name", "dotted_as_names", 
			"dotted_as_name", "import_as_names", "import_as_name", "global_stmt", 
			"compound_stmt", "decorated", "decorator", "if_stmt", "while_stmt", "for_stmt", 
			"funcdef", "parameters", "typedargslist", "tfpdef", "classdef", "try_stmt", 
			"with_stmt", "with_item", "suite", "exprlist", "testlist"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "'def'", "'class'", "'return'", "'if'", "'else'", "'elif'", "'for'", 
			"'while'", "'in'", "'import'", "'from'", "'as'", "'pass'", "'break'", 
			"'continue'", "'global'", "'nonlocal'", "'True'", "'False'", "'None'", 
			"'not'", "'and'", "'or'", "'try'", "'except'", "'finally'", "'with'", 
			"'lambda'", "'async'", "'await'", "'+'", "'-'", "'*'", "'**'", "'/'", 
			"'//'", "'%'", "'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'->'", 
			"'~'", "'&'", "'|'", "'^'", "'<<'", "'>>'", "':'", "','", "'.'", "';'", 
			"'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "NEWLINE", "COMMENT", "WS", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "LBRACE", "RBRACE", "DEF", "CLASS", "RETURN", "IF", 
			"ELSE", "ELIF", "FOR", "WHILE", "IN", "IMPORT", "FROM", "AS", "PASS", 
			"BREAK", "CONTINUE", "GLOBAL", "NONLOCAL", "TRUE", "FALSE", "NONE", "NOT", 
			"AND", "OR", "TRY", "EXCEPT", "FINALLY", "WITH", "LAMBDA", "ASYNC", "AWAIT", 
			"PLUS", "MINUS", "STAR", "POW", "SLASH", "FSLASH", "PERCENT", "EQ", "EQEQ", 
			"NOTEQ", "LT", "LE", "GT", "GE", "ARROW", "TILDE", "BITAND", "BITOR", 
			"XOR", "LSHIFT", "RSHIFT", "COLON", "COMMA", "DOT", "SEMI", "AT", "STRING", 
			"FSTRING", "NUMBER", "NAME", "DEL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProjectParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProjectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgeContext extends ParserRuleContext {
		public ProgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proge; }
	 
		public ProgeContext() { }
		public void copyFrom(ProgeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgeRootContext extends ProgeContext {
		public TerminalNode EOF() { return getToken(ProjectParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Empty_lineContext> empty_line() {
			return getRuleContexts(Empty_lineContext.class);
		}
		public Empty_lineContext empty_line(int i) {
			return getRuleContext(Empty_lineContext.class,i);
		}
		public ProgeRootContext(ProgeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterProgeRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitProgeRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitProgeRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgeContext proge() throws RecognitionException {
		ProgeContext _localctx = new ProgeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_proge);
		int _la;
		try {
			_localctx = new ProgeRootContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 144128699764897102L) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 63L) != 0)) {
				{
				setState(116);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LPAREN:
				case LBRACK:
				case LBRACE:
				case DEF:
				case CLASS:
				case RETURN:
				case IF:
				case FOR:
				case WHILE:
				case IMPORT:
				case FROM:
				case PASS:
				case BREAK:
				case CONTINUE:
				case GLOBAL:
				case TRUE:
				case FALSE:
				case NONE:
				case NOT:
				case TRY:
				case WITH:
				case PLUS:
				case MINUS:
				case TILDE:
				case AT:
				case STRING:
				case FSTRING:
				case NUMBER:
				case NAME:
				case DEL:
					{
					setState(114);
					statement();
					}
					break;
				case INDENT:
				case DEDENT:
				case NEWLINE:
					{
					setState(115);
					empty_line();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Empty_lineContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(ProjectParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ProjectParser.NEWLINE, i);
		}
		public List<TerminalNode> INDENT() { return getTokens(ProjectParser.INDENT); }
		public TerminalNode INDENT(int i) {
			return getToken(ProjectParser.INDENT, i);
		}
		public List<TerminalNode> DEDENT() { return getTokens(ProjectParser.DEDENT); }
		public TerminalNode DEDENT(int i) {
			return getToken(ProjectParser.DEDENT, i);
		}
		public Empty_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_empty_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterEmpty_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitEmpty_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitEmpty_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Empty_lineContext empty_line() throws RecognitionException {
		Empty_lineContext _localctx = new Empty_lineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_empty_line);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(123);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(126); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStatementContext extends StatementContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public SimpleStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitSimpleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitSimpleStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStatementContext extends StatementContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public CompoundStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterCompoundStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitCompoundStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitCompoundStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
			case LBRACK:
			case LBRACE:
			case RETURN:
			case IMPORT:
			case FROM:
			case PASS:
			case BREAK:
			case CONTINUE:
			case GLOBAL:
			case TRUE:
			case FALSE:
			case NONE:
			case NOT:
			case PLUS:
			case MINUS:
			case TILDE:
			case STRING:
			case FSTRING:
			case NUMBER:
			case NAME:
			case DEL:
				_localctx = new SimpleStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				simple_stmt();
				}
				break;
			case DEF:
			case CLASS:
			case IF:
			case FOR:
			case WHILE:
			case TRY:
			case WITH:
			case AT:
				_localctx = new CompoundStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(ProjectParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(ProjectParser.SEMI, i);
		}
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterSimple_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitSimple_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitSimple_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			small_stmt();
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(133);
					match(SEMI);
					setState(134);
					small_stmt();
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(140);
				match(SEMI);
				}
			}

			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(143);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
	 
		public Small_stmtContext() { }
		public void copyFrom(Small_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DelStatementContext extends Small_stmtContext {
		public Del_stmtContext del_stmt() {
			return getRuleContext(Del_stmtContext.class,0);
		}
		public DelStatementContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterDelStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitDelStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitDelStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends Small_stmtContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public ImportStatementContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprStatementContext extends Small_stmtContext {
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public ExprStatementContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterExprStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitExprStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitExprStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalStatementContext extends Small_stmtContext {
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public GlobalStatementContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterGlobalStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitGlobalStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitGlobalStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PassStatementContext extends Small_stmtContext {
		public Pass_stmtContext pass_stmt() {
			return getRuleContext(Pass_stmtContext.class,0);
		}
		public PassStatementContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterPassStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitPassStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitPassStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlowStatementContext extends Small_stmtContext {
		public Flow_stmtContext flow_stmt() {
			return getRuleContext(Flow_stmtContext.class,0);
		}
		public FlowStatementContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).enterFlowStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectParserListener ) ((ProjectParserListener)listener).exitFlowStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectParserVisitor ) return ((ProjectParserVisitor<? extends T>)visitor).visitFlowStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Small_stmtContext small_stmt() throws RecognitionException {
		Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_small_stmt);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
			case LBRACK:
			case LBRACE:
			case TRUE:
			case FALSE:
			case NONE:
			case NOT:
			case PLUS:
			case MINUS:
			case TILDE:
			case STRING:
			case FSTRING:
			case NUMBER:
			case NAME:
				_localctx = new ExprStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				expr_stmt();
				}
				break;
			case DEL:
				_localctx = new DelStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				del_stmt();
				}
				break;
			case PASS:
				_localctx = new PassStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				pass_stmt();
				}
				break;
			case RETURN:
			case BREAK:
			case CONTINUE:
				_localctx = new FlowStatementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				flow_stmt();
				}
				break;
			case IMPORT:
			case FROM:
				_localctx = new ImportStatementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(150);
				import_stmt();
				}
				break;
			case GLOBAL:
				_localctx = new GlobalStatementContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				global_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
